Opened 16 years ago
Closed 16 years ago
#3494 closed bug (fixed)
BTextControl does not respond to scripting commands
Reported by: | matjako | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
BTextControl instances seem not to reply when issued any scripting command from suite/vnd.Be-control (although it is a BControl descendant). This is a compatibility issue.
Change History (4)
comment:1 by , 16 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:2 by , 16 years ago
comment:3 by , 16 years ago
I did some research regarding TODO. BTextControl needs only to implement one feature differently from the vanilla BControl scripting to be compatible with BeOS R5: "Value" property needs to get/set BTextControl's Text() as B_STRING_TYPE. This seems to be undocumented since "Value" is listed as an integer in suite/vnd.Be-control, but it does make sense. Other than that, BTextControl shoul simply pass-through all the business to BControl members without intervention (that's already fixed).
comment:4 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Should be fixed in hrev29982.
Please check with hrev29360.