Prevent BTextControl from eating scripting messages it doesn't handle (though it doesn't currently handle any). Updated TODO note to clarify this. Fixes ticket #3494.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@29360 a95241bf-73f2-0310-859d-f6bbb57e9c96